--- a/receptor/index.html
+++ b/receptor/index.html
@@ -38,7 +38,8 @@
 
         async function fetchDibujo() {
             try {
-                const response = await fetch('http://localhost:3000/api/dibujo');
+                // Actualiza la URL para que apunte a tu aplicación en Render
+                const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
                 const path = await response.json();
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 if (path.length === 0) return;
@@ -63,6 +64,7 @@
             }
         }
 
+        // Llamar a fetchDibujo cada 2 segundos para obtener el dibujo actualizado
         setInterval(fetchDibujo, 2000);
     </script>
 </body>
