--- a/receptor/index.html
+++ b/receptor/index.html
@@ -37,32 +37,31 @@
         window.addEventListener('resize', resizeCanvas);
 
         async function fetchDibujo() {
-    try {
-        const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
-        const path = await response.json();
-        console.log(path); // Agregar esta línea para ver la respuesta
+            try {
+                // Cambiar la URL al servidor de Render
+                const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
+                const path = await response.json();
+                console.log(path); // Agregar esta línea para ver la respuesta
 
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        if (path.length === 0) return;
-        ctx.beginPath();
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                if (path.length === 0) return;
+                ctx.beginPath();
 
-        path.forEach((point) => {
-            if (point.move) {
-                ctx.moveTo(point.x, point.y);
-            } else {
-                ctx.lineTo(point.x, point.y);
-                ctx.lineWidth = point.width || 2;
+                path.forEach((point) => {
+                    if (point.move) {
+                        ctx.moveTo(point.x, point.y);
+                    } else {
+                        ctx.lineTo(point.x, point.y);
+                        ctx.lineWidth = point.width || 2;
+                    }
+                });
+                
+                ctx.strokeStyle = 'white';
+                ctx.stroke();
+            } catch (error) {
+                console.error('Error al obtener el dibujo:', error);
             }
-        });
-        
-        ctx.strokeStyle = 'white';
-        ctx.stroke();
-    } catch (error) {
-        console.error('Error al obtener el dibujo:', error);
-    }
-}
-
-
+        }
 
         // Llamar a fetchDibujo cada 2 segundos para obtener el dibujo actualizado
         setInterval(fetchDibujo, 2000);
