--- a/receptor/index.html
+++ b/receptor/index.html
@@ -8,7 +8,8 @@
         body, html {
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Para evitar barras de desplazamiento */
+            overflow: hidden; /* Prevent scrollbars */
+            font-family: Arial, sans-serif;
         }
         canvas {
             background: #000;
@@ -24,24 +25,19 @@
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
 
-        // Ajusta el tamaño del canvas para ocupar toda la pantalla
+        // Adjust canvas size for mobile devices
         function resizeCanvas() {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
         }
-
-        // Llama a la función para ajustar el tamaño al cargar
         resizeCanvas();
-
-        // Ajusta el tamaño del canvas al cambiar el tamaño de la ventana
         window.addEventListener('resize', resizeCanvas);
 
+        // Fetch drawing data every 2 seconds
         async function fetchDibujo() {
             try {
-                // Cambiar la URL al servidor de Render
                 const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
                 const path = await response.json();
-                console.log(path); // Agregar esta línea para ver la respuesta
 
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 if (path.length === 0) return;
@@ -63,8 +59,7 @@
             }
         }
 
-        // Llamar a fetchDibujo cada 2 segundos para obtener el dibujo actualizado
-        setInterval(fetchDibujo, 2000);
+        setInterval(fetchDibujo, 2000); // Adjust time interval if necessary
     </script>
 </body>
 </html>
