Update URLs to use Render

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -65,8 +65,8 @@
             const header = document.getElementById('header');
             const footer = document.getElementById('footer');
             if (isDarkMode()) {
-                header.style.backgroundImage = 'url("dark-header.png")';
-                footer.style.backgroundImage = 'url("dark-footer.png")';
+                header.style.backgroundImage = 'url("IMG_0575.jpg")';
+                footer.style.backgroundImage = 'url("IMG_0576.jpg")';
             } else {
                 header.style.backgroundImage = 'url("light-notes-icon.png")';
                 footer.style.backgroundImage = 'url("IMG_0573.jpg")';
