--- a/receptor/index.html
+++ b/receptor/index.html
@@ -11,7 +11,6 @@
             overflow: hidden;
         }
         canvas {
-            background: #000;
             display: block;
             width: 100%;
             height: 100%;
@@ -73,11 +72,26 @@
             }
         }
 
+        // Cambiar el fondo y trazo dependiendo del modo
+        function updateCanvasStyle() {
+            if (isDarkMode()) {
+                canvas.style.backgroundColor = 'black';  // Fondo negro en modo oscuro
+                ctx.strokeStyle = 'white';  // Trazo blanco en modo oscuro
+            } else {
+                canvas.style.backgroundColor = 'white';  // Fondo blanco en modo claro
+                ctx.strokeStyle = 'black';  // Trazo negro en modo claro
+            }
+        }
+
         // Llamar a la función al cargar la página y cada vez que se cambie el modo
         updateHeaderFooter();
+        updateCanvasStyle();
 
         // Añadir un listener para cambios de modo en tiempo real
-        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateHeaderFooter);
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
+            updateHeaderFooter();
+            updateCanvasStyle();
+        });
 
         async function fetchDibujo() {
             try {
@@ -98,7 +112,6 @@
                     }
                 });
                 
-                ctx.strokeStyle = 'white';
                 ctx.stroke();
             } catch (error) {
                 console.error('Error al obtener el dibujo:', error);
