Update URLs to use Render

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -10,6 +10,7 @@
             padding: 0;
             overflow: hidden;
             height: 100%;  /* Asegura que el body ocupe todo el alto */
+            background-color: transparent;  /* Evita que el fondo del body cause franjas */
         }
         canvas {
             display: block;
@@ -18,6 +19,7 @@
             position: absolute;
             top: 0;
             left: 0;
+            background-color: transparent;  /* Fondo transparente para el canvas */
         }
         /* Header y Footer */
         #header, #footer {
@@ -25,6 +27,7 @@
             width: 100%;
             left: 0;
             background-size: cover;
+            background-color: transparent;
         }
         #header {
             top: 0;
