--- a/receptor/index.html
+++ b/receptor/index.html
@@ -10,15 +10,15 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            height: 100%;  /* Asegura que el body ocupe todo el alto */
+            height: 100%;
             background-color: transparent;
         }
         canvas {
             display: block;
             width: 100%;
-            height: calc(100% - 100px);  /* Ajustamos para que no cubra la barra de estado */
+            height: 100%;
             position: absolute;
-            top: 50px; /* Deja espacio para el header */
+            top: env(safe-area-inset-top); /* Asegura que no se cubra por la barra de estado */
             left: 0;
             background-color: transparent;
         }
@@ -31,12 +31,12 @@
         }
         #header {
             top: 0;
-            height: 50px; 
+            height: 50px; /* Ajusta la altura */
             z-index: 10;
         }
         #footer {
             bottom: 0;
-            height: 50px;
+            height: 50px; /* Ajusta la altura */
             z-index: 10;
         }
     </style>
@@ -53,7 +53,7 @@
         // Ajusta el tamaño del canvas para ocupar toda la pantalla
         function resizeCanvas() {
             canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight - 100;  // Ajustar para no cubrir el header y footer
+            canvas.height = window.innerHeight;
         }
 
         resizeCanvas();
