Upsdate URLs to use Render

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -134,7 +134,7 @@
             }
         }
 
-        // Periodically fetch drawing data
+        // Periodically fetch drawing datas
         setInterval(fetchDibujo, 2000);
     </script>
 </body>
