--- a/receptor/index.html
+++ b/receptor/index.html
@@ -10,17 +10,17 @@
         body, html {
             margin: 0;
             padding: 0;
-            overflow: hidden;
             height: 100%;
             background-color: transparent;
             display: flex;
             flex-direction: column;
+            overflow: hidden;
         }
 
-        /* Ensure header and footer have no extra margins */
+        /* Ensure the header and footer are fixed */
         #header, #footer {
             width: 100%;
-            height: 50px; /* Adjust height as needed */
+            height: 50px; /* Adjust this to fit your design */
             position: fixed;
             left: 0;
             z-index: 10;
@@ -28,25 +28,23 @@
 
         #header {
             top: 0;
-            background-size: cover;
-            background-color: transparent;
+            background-color: transparent; /* Transparent background */
         }
 
         #footer {
             bottom: 0;
-            background-size: cover;
-            background-color: transparent;
+            background-color: transparent; /* Transparent background */
         }
 
-        /* Adjust canvas to fit between header and footer */
+        /* Make sure canvas fills the remaining space between header and footer */
         canvas {
-            display: block;
             width: 100%;
-            height: calc(100% - 100px); /* Full screen minus header/footer height */
+            height: calc(100% - 100px); /* Subtract height of header and footer */
             position: fixed;
-            top: 50px; /* Adjust based on header height */
+            top: 50px; /* Position below header */
             left: 0;
             background-color: transparent;
+            z-index: 1;
         }
 
     </style>
@@ -104,6 +102,7 @@
         updateHeaderFooter();
         updateCanvasStyle();
 
+        // Listen for changes to the color scheme
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
             updateHeaderFooter();
             updateCanvasStyle();
@@ -134,7 +133,7 @@
             }
         }
 
-        // Periodically fetch drawing datas
+        // Periodically fetch drawing data
         setInterval(fetchDibujo, 2000);
     </script>
 </body>
