--- a/receptor/index.html
+++ b/receptor/index.html
@@ -17,7 +17,7 @@
             overflow: hidden;
         }
 
-        /* Ensure the header and footer are fixed */
+        /* Adjust header and footer to be slightly higher */
         #header, #footer {
             width: 100%;
             height: 50px; /* Adjust this to fit your design */
@@ -26,20 +26,21 @@
             z-index: 10;
         }
 
+        /* Move header and footer higher */
         #header {
-            top: 0;
-            background-color: transparent; /* Transparent background */
+            top: -10px; /* Move header 10px higher */
+            background-color: transparent;
         }
 
         #footer {
-            bottom: 0;
-            background-color: transparent; /* Transparent background */
+            bottom: -10px; /* Move footer 10px higher */
+            background-color: transparent;
         }
 
         /* Make sure canvas fills the remaining space between header and footer */
         canvas {
             width: 100%;
-            height: calc(100% - 100px); /* Subtract height of header and footer */
+            height: calc(100% - 100px); /* Subtract height of header + footer */
             position: fixed;
             top: 50px; /* Position below header */
             left: 0;
