--- a/receptor/index.html
+++ b/receptor/index.html
@@ -19,7 +19,7 @@
 
         #header, #footer {
             width: 100%;
-            height: 50px; /* Adjust as needed */
+            height: 50px; /* Adjust header/footer height */
             position: fixed;
             left: 0;
             z-index: 10;
@@ -27,14 +27,15 @@
             background-color: transparent;
         }
 
-        /* Header positioning */
+        /* Adjust header and footer positioning */
         #header {
             top: 0;
+            margin-top: 0; /* Remove any unwanted space above the header */
         }
 
-        /* Footer positioning */
         #footer {
             bottom: 0;
+            margin-bottom: 0; /* Remove any unwanted space below the footer */
         }
 
         canvas {
