Upsdate URLs to use Render

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">  <!-- Ensure status bar is default -->
-    <meta name="theme-color" content="transparent">  <!-- Make the theme color transparent to avoid any bar color interference -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Set status bar to black translucent -->
+    <meta name="theme-color" content="transparent"> <!-- Set theme color to transparent, allowing status bar to blend -->
     <title>Receptor</title>
     <style>
         body, html {
@@ -18,12 +18,6 @@
             align-items: center;
         }
 
-        /* Reset the background color on body to avoid any background interference */
-        body {
-            background-color: transparent;
-        }
-
-        /* Header and footer positioning */
         #header, #footer {
             width: 100%;
             height: 60px; /* Increase header/footer height */
