--- a/receptor/index.html
+++ b/receptor/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default"> <!-- Default status bar style -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Dark status bar for dark mode -->
     <meta name="theme-color" content="white"> <!-- White status bar for light mode -->
     <title>Receptor</title>
     <style>
@@ -81,13 +81,15 @@
             const header = document.getElementById('header');
             const footer = document.getElementById('footer');
             if (isDarkMode()) {
-                header.style.backgroundImage = 'url("dark-header.png")';
-                footer.style.backgroundImage = 'url("dark-footer.png")';
-                document.querySelector('meta[name="theme-color"]').setAttribute('content', 'black'); // Set theme-color to black for dark mode
+                header.style.backgroundImage = 'url("dark-header.png")';  // Dark header image
+                footer.style.backgroundImage = 'url("dark-footer.png")';  // Dark footer image
+                document.querySelector('meta[name="theme-color"]').setAttribute('content', 'black'); // Dark status bar
+                document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'black-translucent'); // Dark status bar style
             } else {
-                header.style.backgroundImage = 'url("light-header.png")';
-                footer.style.backgroundImage = 'url("light-footer.png")';
-                document.querySelector('meta[name="theme-color"]').setAttribute('content', 'white'); // Set theme-color to white for light mode
+                header.style.backgroundImage = 'url("light-header.png")';  // Light header image
+                footer.style.backgroundImage = 'url("light-footer.png")';  // Light footer image
+                document.querySelector('meta[name="theme-color"]').setAttribute('content', 'white'); // Light status bar
+                document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'default'); // Default status bar style
             }
         }
 
